<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item1"
        android:title="@string/a" />
    <item
        android:id="@+id/item2"
        android:title="@string/b" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item3"
            android:title="@string/group_item1" />
        <item
            android:id="@+id/item4"
            android:title="@string/group_item_2" />
    </group>
    <item
        android:id="@+id/sub"
        android:title="@string/sub_menu">
        <menu>
            <item
                android:id="@+id/s1"
                android:title="@string/sub_menu_item_1" />
            <item
                android:id="@+id/s2"
                android:title="@string/sub_menu_item_2" />
        </menu>
    </item>

</menu>